recursion.lessons.recursion.tree.Tree.scala.error
Tree:27: error: not found: value nbPas
	tree(nbPas,longueur,angle,shrink)
             ^