recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
 //noir,gris,vert,jaune,orange,violet,bleu

var etage=steps
var longueur=length

// Cas trivial
	if(steps==0)
	{
	return
	}









	current(steps)
	avance(length)
	droite(angle)
	longueur=longueur*shrink
	etage=etage-1 // On baisse d'un etage à chaque fois
	tree(nbPas,longueur,angle,shrink)
	gauche(2*angle)
	tree(etage,longueur,angle,shrink)
	 // Pour faire le chemin retour sans toucher aux couleurs
	recule(longueur)
}
